<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_journal">

    <fragment
        android:id="@+id/navigation_timeline"
        android:name="com.example.lighthouse.ui.timeline.TimelineFragment"
        android:label="@string/title_timeline"
        tools:layout="@layout/fragment_timeline" />

    <fragment
        android:id="@+id/navigation_journal"
        android:name="com.example.lighthouse.ui.journal.JournalFragment"
        android:label="@string/title_journal"
        tools:layout="@layout/fragment_journal" />

    <fragment
        android:id="@+id/navigation_affirmations"
        android:name="com.example.lighthouse.ui.affirmations.AffirmationsFragment"
        android:label="@string/title_affirmations"
        tools:layout="@layout/fragment_affirmations" />
</navigation>