<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.journal.JournalFragment">


    <TextView
        android:id="@+id/journalLegend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/if_you_don_t_feel_like_a_question_is_relevant_just_type_n_a"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/journalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"></TextView>

    <ScrollView
        android:id="@+id/journalScrollView"
        android:layout_width="match_parent"
        android:layout_height="625dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/currentEmotionInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/currentFeeling"
                android:importantForAutofill="no"
                android:inputType="textShortMessage|textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/resultantActionsInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/resultantActions"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currentEmotionInput" />

            <EditText
                android:id="@+id/whatInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/what"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resultantActionsInput" />

            <EditText
                android:id="@+id/whereInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/where"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/whatInput" />

            <EditText
                android:id="@+id/noticedInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/noticed"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/whereInput" />

            <EditText
                android:id="@+id/whenIFeltInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:alpha="1.25"
                android:ems="10"
                android:hint="@string/whenIFelt"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noticedInput" />

            <EditText
                android:id="@+id/actionsTakenInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/did_you_do_anything_in_response"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/whenIFeltInput" />

            <EditText
                android:id="@+id/thoughtsInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/theThoughtsThatCameToMind"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actionsTakenInput" />

            <EditText
                android:id="@+id/appropriateReactionInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/appropriateReaction"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thoughtsInput" />

            <EditText
                android:id="@+id/controlInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/isTheSituationControllable"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appropriateReactionInput" />

            <EditText
                android:id="@+id/canITolerateItInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/canITolerateIt"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/controlInput" />

            <EditText
                android:id="@+id/boundaryInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/boundaryToSet"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/canITolerateItInput" />

            <Button
                android:id="@+id/journalSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="submitJournal"
                android:text="@string/finish"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/boundaryInput"
                app:layout_constraintVertical_bias="0.0" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>